# gigica

./: Cargo.toml  pyproject.toml
src/: lib.rs
src/gigica/: __init__.py  _algorithm.py  estimator.py
tests/: check.py  test_benchmark.py  test_compare.py  test_equivalence.py  test_low_sample_size.py  test_transform.py  test_warnings.py  utils.py
