[project]
name = "gigica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Patrick Sadil", email = "psadil@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["numpy", "scikit-learn"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
python-source = "src"
module-name = "gigica._gigica"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
gigica = { path = ".", editable = true }


[tool.pixi.dependencies]
maturin = ">=1.11.5,<2"
uv = ">=0.9.24,<0.10"
jupyter = ">=1.1.1,<2"
pytest = ">=9.0.2,<10"
h5py = ">=3.15.1,<4"
